--- a/resources/css/ceres.css
+++ b/resources/css/ceres.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 /*!
  * Bootstrap v4.0.0-alpha.3 (http://getbootstrap.com)
- * Copyright 2011-2016 The Bootstrap Authors null
+ * Copyright 2011-2016 The Bootstrap Authors
  * Copyright 2011-2016 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
  */
