--- a/resources/css/ceres.scss
+++ b/resources/css/ceres.scss
@@ -99,7 +99,7 @@ $custom-colors: (
 
 $top-bar-bg:            #000000;
 $top-bar-color:         #ffffff;
-$top-bar-basket-btn:    $ffffff;
+$top-bar-basket-btn:    #ffffff;
 $top-bar-basket-color:  #ffffff;
 
 $footer-bg:             $gray-lightest;
