--- a/resources/css/ceres.scss
+++ b/resources/css/ceres.scss
@@ -3,7 +3,7 @@
 // in Sass 3.3 this can be improved with: function-exists(twbs-font-path)
 // $bootstrap-sass-asset-helper: (twbs-font-path("") != unquote('twbs-font-path("")'));
 //
-// Variables
+// Variables 1
 // --------------------------------------------------
 
 // Root directory
