--- a/resources/css/ceres.css
+++ b/resources/css/ceres.css
@@ -3835,11 +3835,11 @@ input[type="button"].btn-block {
 }
 
 .navbar-dark .navbar-brand {
-  color: white;
+  color: #ffffff;
 }
 
 .navbar-dark .navbar-brand:focus, .navbar-dark .navbar-brand:hover {
-  color: white;
+  color: #ffffff;
 }
 
 .navbar-dark .navbar-nav .nav-link {
@@ -3847,7 +3847,7 @@ input[type="button"].btn-block {
 }
 
 .navbar-dark .navbar-nav .nav-link:focus, .navbar-dark .navbar-nav .nav-link:hover {
-  color: white;
+  color: #ffffff;
 }
 
 .navbar-dark .navbar-nav .open > .nav-link, .navbar-dark .navbar-nav .open > .nav-link:focus, .navbar-dark .navbar-nav .open > .nav-link:hover,
@@ -3860,7 +3860,7 @@ input[type="button"].btn-block {
 .navbar-dark .navbar-nav .nav-link.active,
 .navbar-dark .navbar-nav .nav-link.active:focus,
 .navbar-dark .navbar-nav .nav-link.active:hover {
-  color: white;
+  color: #ffffff;
 }
 
 .navbar-dark .navbar-divider {
