--- a/resources/css/ceres.scss
+++ b/resources/css/ceres.scss
@@ -13642,9 +13642,9 @@ body.menu-is-visible {
 	position: fixed;
 }
 #mainNavbarCollapsable {
-	background 	: $menu-bg-sm;
+	background 	: #000000;
 	bottom 		: 0;
-	color 		: $menu-color-sm;
+	color 		: #ffffff;
 	font-size 	: $menu-font-s-sm;
 	left 		: 0;
 	opacity 	: .6;
