--- a/resources/css/ceres.css
+++ b/resources/css/ceres.css
@@ -14769,7 +14769,7 @@ Custom classes
 }
 
 .top-bar .controls-list .control-basket .toggle-basket-preview {
-  background-color: #008ebd;
+  background-color: #000000;
   color: #fff;
 }
 
