--- a/resources/css/ceres.css
+++ b/resources/css/ceres.css
@@ -14874,7 +14874,7 @@ Custom classes
 .navbar {
   padding: 0;
   z-index: 1050;
-  background-color: #f7f7f9;
+  background-color: #fff;
   border-bottom: 1px solid #dcdbd8;
 }
 
