--- a/resources/css/ceres.css
+++ b/resources/css/ceres.css
@@ -1,8 +1,8 @@
 @charset "UTF-8";
 /*!
  * Bootstrap v4.0.0-alpha.3 (http://getbootstrap.com)
- * Copyright 2011-2016 The Bootstrap Authors 111
- * Copyright 2011-2016 Twitter, Inc.
+ * Copyright 2011-2016 The Bootstrap Authors
+ * Copyright 2011-2016 Twitter, Inc. 1112334
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
  */
 /*! normalize.css v4.0.0 | MIT License | github.com/necolas/normalize.css */
@@ -3835,11 +3835,11 @@ input[type="button"].btn-block {
 }
 
 .navbar-dark .navbar-brand {
-  color: #ffffff;
+  color: white;
 }
 
 .navbar-dark .navbar-brand:focus, .navbar-dark .navbar-brand:hover {
-  color: #ffffff;
+  color: white;
 }
 
 .navbar-dark .navbar-nav .nav-link {
@@ -3847,7 +3847,7 @@ input[type="button"].btn-block {
 }
 
 .navbar-dark .navbar-nav .nav-link:focus, .navbar-dark .navbar-nav .nav-link:hover {
-  color: #ffffff;
+  color: white;
 }
 
 .navbar-dark .navbar-nav .open > .nav-link, .navbar-dark .navbar-nav .open > .nav-link:focus, .navbar-dark .navbar-nav .open > .nav-link:hover,
@@ -3860,7 +3860,7 @@ input[type="button"].btn-block {
 .navbar-dark .navbar-nav .nav-link.active,
 .navbar-dark .navbar-nav .nav-link.active:focus,
 .navbar-dark .navbar-nav .nav-link.active:hover {
-  color: #ffffff;
+  color: white;
 }
 
 .navbar-dark .navbar-divider {
@@ -14515,8 +14515,8 @@ Custom classes
 .top-bar {
   width: 100%;
   z-index: 1060;
-  color: #ffffff;
-  background-color: #000000;
+  color: #fff;
+  background-color: #4D4F4D;
   box-shadow: 0 0 7px 0 rgba(0, 0, 0, 0.5);
 }
 
@@ -14605,7 +14605,7 @@ Custom classes
 
 .top-bar .controls-list > li {
   font-size: 1rem;
-  color: #ffffff;
+  color: #dcdbd8;
   margin-right: 0;
 }
 
@@ -14613,7 +14613,7 @@ Custom classes
   .top-bar .controls-list > li a:not(.btn) {
     padding: 0.5rem .5rem;
     display: inline-block;
-    color: #ffffff;
+    color: #dcdbd8;
   }
   .top-bar .controls-list > li a:not(.btn)[aria-expanded="true"] {
     background-color: #008ebd;
@@ -14769,7 +14769,7 @@ Custom classes
 }
 
 .top-bar .controls-list .control-basket .toggle-basket-preview {
-  background-color: #000000;
+  background-color: #008ebd;
   color: #fff;
 }
 
@@ -14874,7 +14874,7 @@ Custom classes
 .navbar {
   padding: 0;
   z-index: 1050;
-  background-color: #fff;
+  background-color: #f7f7f9;
   border-bottom: 1px solid #dcdbd8;
 }
 
@@ -15313,7 +15313,7 @@ body.menu-is-visible {
 }
 
 #mainNavbarCollapsable {
-  background: #000000;
+  background: #008ebd;
   bottom: 0;
   color: #fff;
   font-size: 1.2em;
@@ -15373,7 +15373,6 @@ body.menu-is-visible {
   margin: 0;
   padding: 0;
   position: relative;
-	color: #ffffff;
 }
 
 #mainNavbarCollapsable ul.mainmenu li {
@@ -15412,7 +15411,7 @@ body.menu-is-visible {
 }
 
 #mainNavbarCollapsable ul.mainmenu li ul {
-  background: #000000;
+  background: #008ebd;
   left: 0;
   list-style: none;
   margin: 0;
@@ -15496,7 +15495,7 @@ body.menu-is-visible {
   }
   .no-touch #mainNavbarCollapsable ul.mainmenu > li > ul > li:hover,
   .touch #mainNavbarCollapsable ul.mainmenu > li > ul > li.hover {
-    background: #000000;
+    background: #008ebd;
     color: #fff;
     text-decoration: none;
   }
@@ -15505,7 +15504,7 @@ body.menu-is-visible {
   }
   .no-touch #mainNavbarCollapsable ul.mainmenu > li:hover,
   .touch #mainNavbarCollapsable ul.mainmenu > li.hover {
-    background-color: #000000;
+    background-color: #008ebd;
     color: #fff;
     transition: all .1s ease;
   }
@@ -15536,10 +15535,6 @@ body.menu-is-visible {
 @media (min-width: 992px) {
   nav.navbar.megamenu {
     position: relative;
-    background-color: #000000;
-}
-
-
   }
 }
 
@@ -15557,15 +15552,15 @@ body.menu-is-visible {
   }
   .no-touch nav.navbar.megamenu #mainNavbarCollapsable ul.mainmenu > li:hover,
   .touch nav.navbar.megamenu #mainNavbarCollapsable ul.mainmenu > li.hover {
-    background: #000000;
-    color: #ffffff;
+    background: #fff;
+    color: #004157 !important;
   }
   .no-touch nav.navbar.megamenu #mainNavbarCollapsable ul.mainmenu > li:hover > ul.collapse,
   .touch nav.navbar.megamenu #mainNavbarCollapsable ul.mainmenu > li.hover > ul.collapse {
     display: block;
   }
   nav.navbar.megamenu #mainNavbarCollapsable ul.mainmenu > li > ul.collapse {
-    background-color: #000000;
+    background-color: #fff;
     columns: 5 228px;
     column-gap: .5em;
     column-rule: 1px solid #dcdbd7;
@@ -15583,12 +15578,12 @@ body.menu-is-visible {
     padding: .5em 1em;
   }
   nav.navbar.megamenu #mainNavbarCollapsable ul.mainmenu > li > ul.collapse > li.level1 > a {
-    color: #ffffff;
+    color: #008ebd;
     font-weight: bold;
   }
   .no-touch nav.navbar.megamenu #mainNavbarCollapsable ul.mainmenu > li > ul.collapse > li:hover,
   .touch nav.navbar.megamenu #mainNavbarCollapsable ul.mainmenu > li > ul.collapse > li.hover {
-    background: #000000;
+    background: #fff;
   }
   nav.navbar.megamenu #mainNavbarCollapsable ul.mainmenu > li > ul.collapse > li .level2 {
     padding: 0.25em 0 !important;
@@ -15597,29 +15592,29 @@ body.menu-is-visible {
     padding: 0 1em .25em 1.4em !important;
   }
   nav.navbar.megamenu #mainNavbarCollapsable ul.mainmenu > li > ul.collapse > li .bt-more > a {
-    color: #ffffff;
+    color: #7a7f7f;
     text-transform: lowercase;
   }
   nav.navbar.megamenu #mainNavbarCollapsable ul.mainmenu > li > ul.collapse > li a {
-    background: #000000;
-    color: #ffffff;
+    background: #fff;
+    color: #000;
     padding: 0;
     text-align: left;
   }
   .no-touch nav.navbar.megamenu #mainNavbarCollapsable ul.mainmenu > li > ul.collapse > li a:hover,
   .touch nav.navbar.megamenu #mainNavbarCollapsable ul.mainmenu > li > ul.collapse > li a.hover {
-    background: #000000;
-    color: #ffffff;
+    background: #fff;
+    color: #004157 !important;
   }
   nav.navbar.megamenu #mainNavbarCollapsable ul.mainmenu > li > ul.collapse > li ul {
-    background-color: #000000;
+    background-color: #fff;
   }
 }
 
 .mobile-navigation {
-  background: #000000;
+  background: #008ebd;
   bottom: 0;
-  color: #ffffff;
+  color: #fff;
   font-size: 1.2em;
   left: 0;
   opacity: .6;
