--- a/resources/views/Basket/Components/BasketList.twig
+++ b/resources/views/Basket/Components/BasketList.twig
@@ -9,7 +9,7 @@
                 <div class="h5">{{ trans("Ceres::Template.basketNoItems") }}</div>
             </div>
             <transition-group name="wish-list-item-transition" tag="div">
-                <basket-list-item template="#vue-basket-list-item" v-for="basketItem in basketItems" :key="basketItem.id" :basket-item="basketItem" :size="size" language="{{ services.sessionStorage.getLang() }}"></basket-list-item>
+                <basket-list-item template="#vue-basket-list-item" v-for="basketItem in basketItems" :appearance="appearance" :key="basketItem.id" :basket-item="basketItem" :size="size" language="{{ services.sessionStorage.getLang() }}"></basket-list-item>
             </transition-group>
         </div>
 
