fixed issue with wrong positioned icon

--- a/resources/scss/ceres/common/_common.scss
+++ b/resources/scss/ceres/common/_common.scss
@@ -41,6 +41,10 @@ body .wrapper-main{
     i.fa-search {
         font-size: 10em;
     }
+    i.fa-home {
+        margin-left: 5px;
+        margin-top: 2px;
+    }
     .default-not-found {
         background-color: rgb(247, 247, 249);
     }
