--- a/resources/views/StaticPages/PageNotFound.twig
+++ b/resources/views/StaticPages/PageNotFound.twig
@@ -20,7 +20,7 @@
                             <p class="lead">{{ trans("Ceres::Template.pageNotFoundPage") }}</p>
                             <hr class="my-4">
                             <p class="lead">
-                                <a class="btn btn-primary btn-lg" href="{{ homepageURL }}" role="button"><i class="fa fa-home" aria-hidden="true"></i> {{ trans("Ceres::Template.pageNotFoundHomepage") }}</a>
+                                <a class="btn btn-primary btn-lg" href="{{ homepageURL }}" role="button"><span><i class="fa fa-home" aria-hidden="true"></span></i>{{ trans("Ceres::Template.pageNotFoundHomepage") }}</a>
                             </p>
                         </div>
                         <div class="col-md-6 text-md-right not-found-text">
