# Updated: * List widget logic to use the UrlPicker

--- a/resources/views/Widgets/Common/ListWidget.twig
+++ b/resources/views/Widgets/Common/ListWidget.twig
@@ -1,3 +1,6 @@
+{% import "Ceres::Widgets.Helper.TwigBuilder" as Twig %}
+{% import "Ceres::Widgets.Helper.TwigWidgetMacros" as WidgetHelpers %}
+
 {% set title            = widget.settings.title.mobile %}
 {% set icon             = widget.settings.icon.mobile %}
 {% set centered         = widget.settings.centered.mobile %}
@@ -14,17 +17,20 @@
             {% if listEntries | length > 0 %}
                 <ul class="list-unstyled{% if centered %} list-centered{% endif %}">
                     {% for entry in listEntries %}
-                        {#{{ dump(entry) }}#}
+                        {{ WidgetHelpers.getUrlPicker(entry.url.value, entry.url.type) }}
                         <li>
                             {% if icon != "none" %}
                                 <i class="fa {{ icon }}" aria-hidden="true"></i>
                             {% endif %}
 
                             {% if entry.url.value is not empty %}
-                                <a href="{{ entry.url.value }}">{{ entry.text }}</a>
-                            {% else %}
-                                {{ entry.text }}
-                            {% endif %}
+                                <a  {{ Twig.if("url | trim is not empty") }} href="{{ Twig.print("url") }}"
+                                    {{ Twig.else("imageUrl | trim is not empty") }} href="{{ Twig.print("imageUrl") }}"{{ Twig.endif() }}>
+                                        {{ entry.text }}
+                                    {% else %}
+                                        {{ entry.text }}
+                                    {% endif %}
+                                </a>
                         </li>
                     {% endfor %}
                 </ul>
