CHANGE BasketListItem - add variation properties on checkout view

--- a/resources/views/Basket/Components/BasketListItem.twig
+++ b/resources/views/Basket/Components/BasketListItem.twig
@@ -49,6 +49,17 @@
                                     <span>${ attribute.value.names.name }</span>
                                 </div>
                             </div>
+
+                            {% if services.template.isCurrentTemplate("tpl.checkout") %}
+                                <div class="item-small-prices text-muted">
+                                    <template v-for="propertyGroup in variationPropertyGroups">
+                                        <div v-for="property in propertyGroup.properties">
+                                            <strong v-if="propertyGroup.name">${ propertyGroup.name }:</strong>
+                                            <span>${ property.names.name }</span>
+                                        </div>
+                                    </template>
+                                </div>
+                            {% endif %}
                         </div>
                     </div>
     
