FIX BasketTotalsWidget.twig - json_encode the props

--- a/resources/views/Widgets/Checkout/BasketTotalsWidget.twig
+++ b/resources/views/Widgets/Checkout/BasketTotalsWidget.twig
@@ -7,6 +7,6 @@
 } %}
 <div>
     {{ Twig.print(Twig.call("LayoutContainer.show", ["Ceres::Checkout.BeforeBasketTotals"])) }}
-    <basket-totals :visible-fields="{{ widget.settings.visibleFields.mobile }}"></basket-totals>
+    <basket-totals :visible-fields="{{ widget.settings.visibleFields.mobile | json_encode }}"></basket-totals>
     {{ Twig.print(Twig.call("LayoutContainer.show", ["Ceres::Checkout.AfterBasketTotals"])) }}
 </div>
