--- a/resources/css/ceres.css
+++ b/resources/css/ceres.css
@@ -3836,11 +3836,11 @@ input[type="button"].btn-block {
 }
 
 .navbar-dark .navbar-brand {
-  color: white;
+  color: #ffffff;
 }
 
 .navbar-dark .navbar-brand:focus, .navbar-dark .navbar-brand:hover {
-  color: white;
+  color: #ffffff;
 }
 
 .navbar-dark .navbar-nav .nav-link {
@@ -3848,7 +3848,7 @@ input[type="button"].btn-block {
 }
 
 .navbar-dark .navbar-nav .nav-link:focus, .navbar-dark .navbar-nav .nav-link:hover {
-  color: white;
+  color: #ffffff;
 }
 
 .navbar-dark .navbar-nav .open > .nav-link, .navbar-dark .navbar-nav .open > .nav-link:focus, .navbar-dark .navbar-nav .open > .nav-link:hover,
@@ -3861,7 +3861,7 @@ input[type="button"].btn-block {
 .navbar-dark .navbar-nav .nav-link.active,
 .navbar-dark .navbar-nav .nav-link.active:focus,
 .navbar-dark .navbar-nav .nav-link.active:hover {
-  color: white;
+  color: #ffffff;
 }
 
 .navbar-dark .navbar-divider {
@@ -14806,11 +14806,11 @@ Custom classes
 }
 
 .wrapper-main .navbar a {
-  color: #4D4F4D;
+  color: #ffffff;
 }
 
 .wrapper-main .navbar a:hover {
-  color: #282d2f;
+  color: #ffffff;
 }
 
 .wrapper-main .navbar .navbar-nav .nav-item > .nav-link {
@@ -14829,7 +14829,7 @@ Custom classes
 
 .wrapper-main .navbar .navbar-nav .nav-item:hover .nav-link {
   background: transparent;
-  color: #282d2f;
+  color: #ffffff;
   cursor: pointer;
 }
 
@@ -14875,7 +14875,7 @@ Custom classes
 .navbar {
   padding: 0;
   z-index: 1050;
-  background-color: #f7f7f9;
+  background-color: #000000;
   border-bottom: 1px solid #dcdbd8;
 }
 
