--- a/resources/css/ceres.css
+++ b/resources/css/ceres.css
@@ -14869,7 +14869,7 @@ Custom classes
 
 .wrapper-main .navbar .navbar-nav .nav-item:hover .dropdown-menu .dropdown-item:hover {
   background: #00688a;
-  color: white;
+  color: #ffffff;
 }
 
 .navbar {
