--- a/resources/views/PageDesign/Partials/Header/DefaultHeader.twig
+++ b/resources/views/PageDesign/Partials/Header/DefaultHeader.twig
@@ -1,15 +1,14 @@
 <header id="page-header" class="top-bar pos-f-t">
     <div>
     
-       <div class="row" style="background-color:#000000;color:#ffffff;" >
-         New Winter Sale Discount
+       <div class="row">
          
         </div>
         <div class="container-max">
        
       
         
-            <div class="row" style="background-color:#000000;color:#ffffff;" >
+            <div class="row" >
             
             
             
@@ -18,8 +17,9 @@
                 <ul id="controlsList" class="controls-list list-inline">
                 
                 
-                
-
+                <li>
+New Winter Sale - Top Service 
+</li>
                     <li class="list-inline-item control-user">
                         <user-login-handler>
                             <a data-toggle="modal">
