style="background-color:#000000;color:#ffffff;" topbar widget

--- a/resources/views/Widgets/Header/TopBarWidget.twig
+++ b/resources/views/Widgets/Header/TopBarWidget.twig
@@ -23,7 +23,7 @@
 
 <div class="top-bar{% if not isFixed %} unfixed{% endif %}">
     <div class="container-max">
-        <div class="row">
+        <div class="row" style="background-color:#000000;color:#ffffff;" >
             <div class="top-bar-items {% if searchStyle == "permanent" %}search-shown{% endif %}">
                 {% if searchStyle == "permanent" %}
                     <div class="always-visible-search">
