--- a/resources/views/Checkout/Components/PaymentProviderSelect.twig
+++ b/resources/views/Checkout/Components/PaymentProviderSelect.twig
@@ -11,7 +11,7 @@
                         :checked="methodOfPaymentId === paymentProvider.id"
                         :disabled="!paymentProvider.isSelectable"
                 >
-                <label :for="'paymentMethod' + _uid + paymentProvider.id">
+                <label class="provider-select-label" :for="'paymentMethod' + _uid + paymentProvider.id">
                     <div class="icon">
                         <div class="square-container">
                             <div class="square-inner center-xy">
