--- a/resources/views/Widgets/Checkout/ShippingProfileWidget.twig
+++ b/resources/views/Widgets/Checkout/ShippingProfileWidget.twig
@@ -6,7 +6,7 @@
 {{ Twig.set("overrideShippingProfiles", Twig.call("LayoutContainer.show", ["Ceres::Checkout.ShippingProfileList"])) }}
 {% set hinttext = widget.settings.hinttext.mobile %}
 
-<div class="widget widget-shipping-profile widget-{{ widget.settings.appearance.mobile | default("primary") }}">
+<div class="widget widget-provider-select widget-{{ widget.settings.appearance.mobile | default("primary") }}">
     <h3 class="mb-3">{{ Twig.trans("Ceres::Template.checkoutShippingProfile") }}</h3>
 
     {% if hinttext is not empty %}
