added template for inserting asterisk if checkbox isRequired

--- a/resources/scss/ceres/forms/_inputs.scss
+++ b/resources/scss/ceres/forms/_inputs.scss
@@ -302,7 +302,6 @@ $border-width: 1px;
 .form-check
 {
     transition: all .3s ease;
-    cursor: pointer;
     margin-bottom: .75rem;
 
     &.error
@@ -326,6 +325,9 @@ $border-width: 1px;
         {
             color: $white !important;
         }
+    }
+    .form-check-input {
+        cursor: pointer;
     }
 }
 
