removed excess whitespaces

--- a/resources/views/Checkout/Components/SubscribeNewsletterCheck.twig
+++ b/resources/views/Checkout/Components/SubscribeNewsletterCheck.twig
@@ -7,8 +7,8 @@
                 {{ trans("Ceres::Template.newsletterCheckboxLabel") }}<!--
             --></template>
             <template v-else>
-                ${ customText }
-            </template><!--
+                ${ customText }<!--
+            --></template><!--
             --><template v-if="isRequired">*</template>
         </label>
     </div>
