added raw filter

--- a/resources/views/Checkout/Components/SubscribeNewsletterCheck.twig
+++ b/resources/views/Checkout/Components/SubscribeNewsletterCheck.twig
@@ -7,7 +7,7 @@
                 {{ trans("Ceres::Template.newsletterCheckboxLabel") }}<!--
             --></template>
             <template v-else>
-                ${ customText }<!--
+                ${ customText | raw }<!--
             --></template><!--
             --><template v-if="isRequired">*</template>
         </label>
